<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:background="#000000"
    android:fillViewport="true"

    tools:context="com.tom.smile.About" >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title1"
            android:layout_centerHorizontal="true"
            android:textColor="#b0bec5"
            android:text="@string/from_saltt_inc"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2"
            android:layout_centerHorizontal="true"
            android:textColor="#78909c"
            android:layout_marginTop="14dp"
            android:text="@string/version_1_0"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/aboutt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textColor="#78909c"
            android:layout_below="@+id/textView5"
            android:layout_marginTop="43dp"
            android:text="@string/about"
            android:textSize="14dp" />

        <Button
            android:id="@+id/cobtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#2a36b1"
            android:layout_alignLeft="@+id/textView6"
            android:layout_alignRight="@+id/textView6"
            android:layout_below="@+id/textView6"
            android:layout_marginTop="37dp"
            android:text="@string/contact_us" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/aboutt"
            android:layout_marginTop="18dp"
            android:text="@string/contact"
            android:textColor="#ffffff"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_below="@+id/textView4"
            android:textColor="#78909c"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/images_from" />

        <TextView
            android:id="@+id/title1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:text="@string/smile"
            android:textColor="#ffffff"
            android:textSize="60dp" />

    </RelativeLayout>


</ScrollView>

